# ai-wealth-companion

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.py  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260120_0001_001_initial_schema.py  20260127_1124_b267829b4c1f_add_tasks_table.py
backend/scripts/: seed_demo_data.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  base.py  master.py  openai_wrapper.py  registry.py
backend/src/api/: deps.py  metrics.py
backend/src/core/: config.py  security.py
backend/src/db/: __init__.py  seed.py  session.py
backend/src/events/: __init__.py  handlers.py  idempotency.py  publishers.py  schemas.py
backend/src/mcp/: __init__.py  official_server.py  server.py
backend/src/models/: __init__.py  agent_memory.py  budget.py  category.py  conversation.py  event_log.py  goal.py  insight_cache.py  message.py  monthly_snapshot.py  summary.py  task.py  transaction.py  user.py  wallet.py
backend/src/repositories/: __init__.py  base.py  budget.py  category.py  conversation.py  goal.py  task.py  transaction.py  wallet.py
backend/src/services/: __init__.py  ai.py  auth_service.py  budget.py  category.py  conversation.py  dashboard.py  demo.py  event.py  (+6 more)
backend/tests/: conftest.py  test_api_auth.py  test_api_budgets.py  test_api_categories.py  test_api_summary.py  test_api_transactions.py  test_health.py  test_models.py
(+303 files in other folders)
